# rules

./: CMakeLists.txt  README.md
docs/: CMakeLists.txt  api.rst  conf.py  docConfig  index.rst  requirements.txt  rules.rst
src/: CMakeLists.txt
src/main/: CMakeLists.txt  example.output.txt  main  main.c  rules  rules.c  rules.h
src/rules/: CMakeLists.txt  r_rules.c  r_rules.h  r_rules.inc  r_rules.pc.in  r_rulesConfig.cmake.in  rules.txt
test/: CMakeLists.txt
test/rules/: CMakeCache.txt  CMakeLists.txt  test-create-destroy.c  test-get-tab-size-from-facts.c  test-get-tab-size-from-rules.c  test-init-finish.c  test-write-file.c
